# veyron-plugins

./: .gitignore  README.md  ROADMAP.md  registry.json
docs/superpowers/specs/: 2026-07-15-database-plugin-design.md
plugins/ai/: Cargo.toml  README.md  ROADMAP.md  config.example.yaml  plugin.json
plugins/ai/examples/: smoke_test.rs
plugins/ai/src/: handler.rs  lib.rs  main.rs  request.rs
plugins/ai/src/provider/: anthropic.rs  mod.rs  openai_compat.rs
plugins/network/: Cargo.toml  README.md  ROADMAP.md  config.example.yaml  plugin.json
plugins/network/src/: handler.rs  lib.rs  main.rs  request.rs  ssrf.rs
plugins/ping-pong-rs/: Cargo.toml  plugin.json
plugins/ping-pong-rs/src/: main.rs
scripts/: package.sh
