[package]
name = "ai-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "ai_plugin"
path = "src/lib.rs"

[[bin]]
name = "ai"
path = "src/main.rs"

[dependencies]
veyron-sdk = "0.1"
veyron-wire = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
