[package]
name = "network-plugin"
version = "0.1.4"
edition = "2021"
publish = false

[lib]
name = "network_plugin"
path = "src/lib.rs"

[[bin]]
name = "network"
path = "src/main.rs"

[dependencies]
veyron-sdk = "0.1"
veyron-wire = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
